# Smart-Flatbot

./: README.md
MagTest/: MagTest.sln
MagTest/MagTest/: BNO055.cs  MagTest.csproj  Program.cs
MagTest/MagTest/Properties/: AssemblyInfo.cs
MainRover/: MainRover.cs  MainRover.csproj  packages.config
SmartFlatbot/: SmartFlatbot.sln
SmartFlatbot/SmartFlatbot/: Program.cs  SmartFlatbot.csproj
SmartFlatbot/SmartFlatbot/Properties/: AssemblyInfo.cs
StopFlatbot/: StopFlatbot.sln
StopFlatbot/StopFlatbot/: CytronMD30C.cs  Program.cs  StopFlatbot.csproj
StopFlatbot/StopFlatbot/Properties/: AssemblyInfo.cs
TennisBallTracker/: Jetson_ZED_ballTracker.cpp  Jetson_ZED_ballTracker2.cpp  TennisBallTracker.cpp
UDPBridge/: UDPBridge.sln
UDPBridge/UDPBridge/: Program.cs  UDPBridge.csproj
UDPBridge/UDPBridge/Properties/: AssemblyInfo.cs
ZED_example_get_image/: CMakeLists.txt  compile.sh  main.cpp  mesh.cpp  notWorking.cpp  objectdetect.cpp  old.txt  zedInit.cpp  zedInit.h
